--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
   "dependencies": {
     "express": "4.15.2",
     "jimp": "0.2.27"
+  },
+  "devDependencies": {
+    "del": "3.0.0",
+    "gulp": "3.9.1",
+    "gulp-nodemon": "2.2.1",
+    "gulp-tsc": "1.3.2"
   }
 }
